--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,31 +12,37 @@
         android:id="@+id/mainButtonRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:clickable="true"
+        android:contentDescription="@string/new_transaction"
         android:onClick="onRightButton_Clicked"
         app:backgroundTint="@color/contador_red"
         app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/mainButtonLeft"
-        app:layout_constraintEnd_toEndOf="@+id/fragment_host"
-        app:layout_constraintTop_toTopOf="@+id/mainButtonLeft"
-        app:srcCompat="@drawable/icon_add" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.8"
+        app:srcCompat="@drawable/icon_add"
+        android:focusable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/mainButtonLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginBottom="40dp"
         android:clickable="true"
+        android:contentDescription="@string/settings"
         android:onClick="onLeftButton_Clicked"
         app:backgroundTint="@color/contador_red"
         app:fabSize="mini"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/icon_settings" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.8"
+        app:srcCompat="@drawable/icon_settings"
+        android:focusable="true" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -52,6 +58,7 @@
             android:id="@+id/imgViewMainLogo"
             android:layout_width="90dp"
             android:layout_height="50dp"
+            android:contentDescription="@string/settings"
             app:srcCompat="@drawable/logo_foreground"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="16dp" />
@@ -69,31 +76,27 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_host"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_above="@id/nav_view"
-        android:layout_below="@id/toolbar"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
-        app:navGraph="@navigation/main_navigation">
-
-    </androidx.fragment.app.FragmentContainerView>
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/contador_red"
-        app:itemBackground="@color/contador_red"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        android:layout_width="0dp"
+        android:id="@+id/bottom_navigation_menu_main"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_menu"/>
+
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_menu_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+      />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
