--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,8 +49,7 @@
         <argument
             android:name="parcelFilter"
             app:argType="be.kuleuven.elcontador10.background.parcels.FilterTransactionsParcel"
-            app:nullable="true"
-            />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/transactionsFilter"
@@ -69,9 +68,9 @@
         tools:layout="@layout/fragment_transaction_display" />
     <fragment
         android:id="@+id/newTransaction"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.NewTransaction"
+        android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionNew"
         android:label="fragment_new_transaction"
-        tools:layout="@layout/fragment_new_transaction" >
+        tools:layout="@layout/fragment_transaction_new" >
         <action
             android:id="@+id/action_newTransaction_to_transactions_summary"
             app:destination="@id/transactions_summary" >
