All frames for our simplified app are ready, next I will start adjusting the navigation

--- a/app/src/main/res/layout/fragment_stakeholder_new.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_new.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.shops.Shops">
+    tools:context=".StakeholderNew">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/shops_storage" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
