--- a/app/src/main/res/layout/fragment_stakeholder_disply.xml
+++ b/app/src/main/res/layout/fragment_stakeholder_disply.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StakeholderDisply">
+    tools:context=".fragments.stakeholders.StakeholderDisply">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
