--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,13 +41,18 @@
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="0dp"
         android:id="@+id/bottom_navigation_menu_main"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="75dp"
+        android:background="@color/contador_red"
+        app:labelVisibilityMode="selected"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_menu"/>
+        app:menu="@menu/bottom_menu"
+        app:itemIconTint="@drawable/tab_colour"
+        app:itemTextColor="@drawable/tab_colour"
+        />
 
     <fragment
         android:id="@+id/nav_host_fragment"
